Revert "fix: Improved legend vertical alignment (#235)" (#237)
This reverts commit 635cfe9a8b4e247d0b2aae6d0a6e771f9c1a1e62.

--- a/src/internal/components/series-details/styles.scss
+++ b/src/internal/components/series-details/styles.scss
@@ -40,7 +40,6 @@ $font-weight-bold: cs.$font-weight-heading-s;
   > .key {
     @include styles.text-wrapping;
     display: inline-flex;
-    align-items: center;
     color: cs.$color-text-group-label;
   }
 }
